--- a/ball/index.html
+++ b/ball/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html style="touch-action: none;">
     <head>
-        <title>Mario - Backbone Game Engine</title>
+        <title>Mario- super-mario-bros</title>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <link href="../favicon.ico" rel="shortcut icon" type="image/x-icon" />
