--- a/examples.html
+++ b/examples.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Examples - Backbone Game Engine</title>
-    <meta name="description" content="Games and samples created with Backbone Game Engine.">
+    <title>Examples - Super Mario Bros</title>
+    <meta name="description" content="Games and samples created with Super Mario Bros.">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
