--- a/super-mario-bros/index.html
+++ b/super-mario-bros/index.html
@@ -1,65 +1,73 @@
-<!doctype html>
+<!DOCTYPE html>
 <html style="touch-action: none;" manifest="offline.appcache">
-    <head>
-        <title>Super Mario Bros Level 1-1 - Backbone Game Engine</title>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <link href="../favicon.ico" rel="shortcut icon" type="image/x-icon" />
-        <link href="../apple_touch_icon.png" rel="apple-touch-icon" />
 
-        <meta name="viewport" content="width=960, user-scalable=no"/>
-        <meta name="mobileoptimized" content="0" />
-        <meta name="apple-mobile-web-app-capable" content="yes" />
-        <meta name="mobile-web-app-capable" content="yes" />
-        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
+<head>
+    <title>Super Mario Bros Level 1-1 - Backbone Game Engine</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link href="../favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <link href="../apple_touch_icon.png" rel="apple-touch-icon" />
 
-        <script src="../3rd/qtree.js" type="text/javascript"></script>
-        <script src="../3rd/underscore.js" type="text/javascript"></script>
-        <script src="../3rd/backbone.native.js" type="text/javascript"></script>
-        <script src="../3rd/backbone.js" type="text/javascript"></script>
+    <!-- Viewport settings for better mobile experience -->
+    <meta name="viewport" content="width=960, user-scalable=no" />
+    <meta name="mobileoptimized" content="0" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
-        <script src="../src/adjust-viewport.js" type="text/javascript"></script>
-        <script src="../src/shapes.js" type="text/javascript"></script>
-        <script src="../src/core.js" type="text/javascript"></script>
-        <script src="../src/character.js" type="text/javascript"></script>
-        <script src="../src/input.js" type="text/javascript"></script>
-        <script src="../src/hero.js" type="text/javascript"></script>
-        <script src="../src/world.js" type="text/javascript"></script>
-        <script src="../src/local-storage.js" type="text/javascript"></script>
-        <script src="../src/camera.js" type="text/javascript"></script>
-        <script src="../src/editor.js" type="text/javascript"></script>
+    <!-- External libraries -->
+    <script src="../3rd/qtree.js" type="text/javascript"></script>
+    <script src="../3rd/underscore.js" type="text/javascript"></script>
+    <script src="../3rd/backbone.native.js" type="text/javascript"></script>
+    <script src="../3rd/backbone.js" type="text/javascript"></script>
 
-        <script src="mario.js" type="text/javascript"></script>
-        <script src="tiles.js" type="text/javascript"></script>
-        <script src="artifacts.js" type="text/javascript"></script>
-        <script src="enemies.js" type="text/javascript"></script>
-        <script src="display.js" type="text/javascript"></script>
-        <script src="level_1-1.js" type="text/javascript"></script>
-        <script src="main.js" type="text/javascript"></script>
+    <!-- Engine scripts -->
+    <script src="../src/adjust-viewport.js" type="text/javascript"></script>
+    <script src="../src/shapes.js" type="text/javascript"></script>
+    <script src="../src/core.js" type="text/javascript"></script>
+    <script src="../src/character.js" type="text/javascript"></script>
+    <script src="../src/input.js" type="text/javascript"></script>
+    <script src="../src/hero.js" type="text/javascript"></script>
+    <script src="../src/world.js" type="text/javascript"></script>
+    <script src="../src/local-storage.js" type="text/javascript"></script>
+    <script src="../src/camera.js" type="text/javascript"></script>
+    <script src="../src/editor.js" type="text/javascript"></script>
 
-        <style>
-            body {
-                margin: 0;
-                background-color: #000;
-            }
-            canvas {
-                position: fixed;
-                top: 0;
-                left: 0;
-            }
-        </style>
+    <!-- Game-specific scripts -->
+    <script src="mario.js" type="text/javascript"></script>
+    <script src="tiles.js" type="text/javascript"></script>
+    <script src="artifacts.js" type="text/javascript"></script>
+    <script src="enemies.js" type="text/javascript"></script>
+    <script src="display.js" type="text/javascript"></script>
+    <script src="level_1-1.js" type="text/javascript"></script>
+    <script src="main.js" type="text/javascript"></script>
 
-    </head>
+    <!-- Styling -->
+    <style>
+        body {
+            margin: 0;
+            background-color: #000;
+        }
 
-    <body>
-        <img id="mario" src="super-mario-2x.png" style="display:none;" />
-        <img id="tiles" src="super-mario-tiles-2x.png" style="display:none;" />
-        <img id="enemies" src="super-mario-enemies-2x.png" style="display:none;" />
-        <img id="icons" src="icons.png" style="display:none;" />
+        canvas {
+            position: fixed;
+            top: 0;
+            left: 0;
+        }
+    </style>
+</head>
 
-        <canvas id="foreground" width="960" height="700">
-            Your browser does not support canvas element.
-        </canvas>
-    </body>
+<body>
+    <!-- Hidden images used in the game -->
+    <img id="mario" src="super-mario-2x.png" style="display:none;" />
+    <img id="tiles" src="super-mario-tiles-2x.png" style="display:none;" />
+    <img id="enemies" src="super-mario-enemies-2x.png" style="display:none;" />
+    <img id="icons" src="icons.png" style="display:none;" />
+
+    <!-- Foreground canvas where the game is rendered -->
+    <canvas id="foreground" width="960" height="700">
+        Your browser does not support the canvas element.
+    </canvas>
+</body>
 
 </html>
